Bug 102201 - [regression, SI] GPU crash in Unigine Valley
Summary: [regression, SI] GPU crash in Unigine Valley
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-13 18:20 UTC by Gregor Münch
Modified: 2017-08-19 11:32 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg crash log (55.30 KB, text/plain)
2017-08-13 18:20 UTC, Gregor Münch
Details

Description Gregor Münch 2017-08-13 18:20:05 UTC
Created attachment 133476 [details]
dmesg crash log

I get random GPU lockups in Unigine Valley. Sometimes it happens at Test 5 and sometimes in Test 9. Basically the screen is freezing but music continues playing. After sometime there is only noise on the screen. The performance went also down, I saw 57 fps in Test 1 and now only 54 fps.
I also experience something similar during playing Shadow Warrior, in the Prologue mission, GPU hangs forever.

Bisected this to:
064550238ef0b44e341b2a50c3147f83c2a6d5b0 is the first bad commit
commit 064550238ef0b44e341b2a50c3147f83c2a6d5b0
Author: Marek Olšák <marek.olsak@amd.com>
Date:   Thu Jul 27 02:40:34 2017 +0200

    radeonsi: use CLEAR_STATE to initialize some registers
    
    Reviewed-by: Nicolai Hähnle <nicolai.haehnle@amd.com>

:040000 040000 621668e602ccd2f36299e329b096586baa920ba0 68d43945fde8fbbfad6ae444546a981af2507b03 M	src

During regression testing I faced https://bugs.freedesktop.org/show_bug.cgi?id=101969 where I saw some serious corruption of the graphics in Valley so I used this patch to overcome https://cgit.freedesktop.org/mesa/mesa/commit/?id=b9fc9d3f241758ed8a274be7abf68bf448653508 But its the same issue like in the bug report mentioned above. Seems the patch hasnt fixed all issues.

Device: AMD TAHITI (DRM 2.50.0 / 4.11.0-1-amd-staging, LLVM 5.0.0) (0x6798)
Radeon HD 7970
Comment 1 Marek Olšák 2017-08-18 14:04:49 UTC
Fixed by 13aa8d3da92bd83abc8d5212764a15. Closing.
Comment 2 Gregor Münch 2017-08-19 11:32:41 UTC
Can confirm this. Hangs in Shadow Warrior are also gone.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.